Logseq auto save

--- a/pages/_复杂系统.md
+++ b/pages/_复杂系统.md
@@ -2,4 +2,122 @@
 title: /复杂系统
 ---
 
-## 
+## [(复杂系统，参考书籍 第二期）](https://www.wolai.com/2TSGbzwfUY6XtuRKySQ14Y)
+
+复杂系统，参考书籍（第一期）：
+
+1. 复杂： 诞生于混沌边缘的科学(美 米歇尔.沃尔德罗普)
+
+2. 规模：复杂世界的简单法则(英 杰弗里.韦斯特)
+
+3. 宇宙为家(美 斯图亚特.考夫曼)
+
+4. 复杂经济学：经济思想的新框架(美 布莱恩.阿瑟)
+
+5. 协同学引论：物理学、化学和生物学中的非平衡相变和自组织(德 H.哈肯)
+
+6. 信息与自组织：复杂系统中的宏观方法（德 H.哈肯）
+
+7. 人类的价值：是什么让人类如此独特(美 罗伯特.博伊德)
+
+8. 复杂系统理论基础（欧阳莹之）
+
+9. 技术的本质：技术是什么，它是如何进化的(美 布莱恩.阿瑟)
+
+10. 失控：全人类的最终命运和结局(美 凯文.凯特)
+
+11. 人体简史：你的身体30亿岁了(以色列 比尔.布莱森)
+
+12. 多样性红利(美 斯科特.佩奇)
+
+13. 数学：确定性的丧失(美 M.克莱因)
+
+14. 城市隐秩序：复杂适应系统理论的城市应用(刘春成)
+
+15. 从存在到演化(比利时 普里高津)
+
+16. 同步：秩序如何从混沌中涌现（美 斯蒂芬.斯托加兹）
+
+17. 直觉泵和其它思考工具(美 丹尼尔.丹尼特)
+
+18. 超循环论(P.舒斯特尔 M.艾根)
+
+19. 依赖共生：深度揭秘亲密关系中的吸引力法则(美 巴里.温霍尔德 贾内.温霍尔德)
+
+20. 隐秩序：适应性造就复杂性(美 约翰.H.霍兰)
+
+21. 预知社会：群体行为的内在法则(菲利普.鲍尔)
+
+22. 模型思维：24种让人终生受益的思维模型(美 斯科特.佩奇)
+
+23. 链接：商业、科学与生活的新思维（美 艾伯特.拉斯洛.巴拉巴西)
+
+24. 哥德尔、艾舍尔、巴赫：集异壁之大成（美 侯世达）
+
+25. 第五项修炼：系统思考
+
+26. 一般系统论（美 冯.贝朗塔菲）
+
+27. 探索复杂性（比利时 G.尼克里斯 I.普里高津）
+
+28. 复杂性挑战（美 罗伯特.w.李克罗夫特）
+
+29. 耗散结构论（沈小峰）
+
+30. 复杂： 诞生于混沌边缘的科学(美 米歇尔.沃尔德罗普)
+
+31. 规模：复杂世界的简单法则(英 杰弗里.韦斯特)
+
+32. 宇宙为家(美 斯图亚特.考夫曼)
+
+33. 复杂经济学：经济思想的新框架(美 布莱恩.阿瑟)
+
+34. 协同学引论：物理学、化学和生物学中的非平衡相变和自组织(德 H.哈肯)
+
+35. 信息与自组织：复杂系统中的宏观方法（德 H.哈肯）
+
+36. 人类的价值：是什么让人类如此独特(美 罗伯特.博伊德)
+
+37. 复杂系统理论基础（欧阳莹之）
+
+38. 技术的本质：技术是什么，它是如何进化的(美 布莱恩.阿瑟)
+
+39. 失控：全人类的最终命运和结局(美 凯文.凯特)
+
+40. 人体简史：你的身体30亿岁了(以色列 比尔.布莱森)
+
+41. 多样性红利(美 斯科特.佩奇)
+
+42. 数学：确定性的丧失(美 M.克莱因)
+
+43. 城市隐秩序：复杂适应系统理论的城市应用(刘春成)
+
+44. 从存在到演化(比利时 普里高津)
+
+45. 同步：秩序如何从混沌中涌现（美 斯蒂芬.斯托加兹）
+
+46. 直觉泵和其它思考工具(美 丹尼尔.丹尼特)
+
+47. 超循环论(P.舒斯特尔 M.艾根)
+
+48. 依赖共生：深度揭秘亲密关系中的吸引力法则(美 巴里.温霍尔德 贾内.温霍尔德)
+
+49. 隐秩序：适应性造就复杂性(美 约翰.H.霍兰)
+
+50. 预知社会：群体行为的内在法则(菲利普.鲍尔)
+
+51. 模型思维：24种让人终生受益的思维模型(美 斯科特.佩奇)
+
+52. 链接：商业、科学与生活的新思维（美 艾伯特.拉斯洛.巴拉巴西)
+
+53. 哥德尔、艾舍尔、巴赫：集异壁之大成（美 侯世达）
+
+54. 第五项修炼：系统思考
+
+55. 一般系统论（美 冯.贝朗塔菲）
+
+56. 探索复杂性（比利时 G.尼克里斯 I.普里高津）
+
+57. 复杂性挑战（美 罗伯特.w.李克罗夫特）
+
+58. 耗散结构论（沈小峰）
