Logseq auto save

--- a/pages/_复杂系统.md
+++ b/pages/_复杂系统.md
@@ -2,9 +2,7 @@
 title: /复杂系统
 ---
 
-## [(复杂系统，参考书籍 第二期）](https://www.wolai.com/2TSGbzwfUY6XtuRKySQ14Y)
-
-复杂系统，参考书籍（第一期）：
+## 复杂系统，参考书籍（第一期）：
 
 1. 复杂： 诞生于混沌边缘的科学(美 米歇尔.沃尔德罗普)
 
