Logseq auto save

--- a/pages/_复杂系统，参考书籍（第二期）.md
+++ b/pages/_复杂系统，参考书籍（第二期）.md
@@ -2,4 +2,57 @@
 title: /复杂系统，参考书籍（第二期）
 ---
 
-## 
+## 《从蝴蝶效应谈起》（刘式达）湖南教育出版社  
+《自然之数》（斯图尔特）（翻译）上海科学技术出版社  
+《时间之箭》（柯文尼等）（翻译）湖南科学技术出版社  
+《虚实世界》（卡斯蒂）（翻译）上海科技教育出版社  
+《混沌的本质》（洛伦兹）（翻译）气象出版社  
+《分形对象——形、机遇和维数》（芒德布罗）（翻译）世界图书出版公司  
+《统计力学基础》（哈尔）（翻译）上海科学技术出版社  
+《混沌：对科学和社会的冲击》（格里博格等编）（翻译）湖南科学技术出版社  
+《分形几何——数学基础及其应用》（法尔科内）（翻译）东北大学出版社  
+《从存在到演化》（普里高津）（翻译）上海科学技术出版社  
+《探索复杂性》（尼科里斯等）（翻译）四川教育出版社  
+《大自然的分形几何学》（芒德布罗）（翻译）上海远东出版社  
+《混沌——开创新科学》（格莱克）（翻译）上海译文出版社  
+《混沌与分形——郝柏林科普文集》上海科学技术出版社  
+《普利高津与耗散结构理论》（湛垦华等）陕西科学技术出版社  
+《开创复杂性研究的新学科——系统科学纵览》（魏宏森等）四川教育出版社  
+《分形漫步》（凯伊）（翻译）东北大学出版社  
+《探索热的本质》（申先甲）北京出版社  
+《混沌学引论》（舒斯特）（翻译）四川教育出版社  
+《混沌》（吕尔萨）（翻译）科学出版社  
+《从抛物线谈起》（郝柏林）上海科技教育出版社  
+《漫谈分形》（张志三）湖南教育出版社  
+《从混沌到有序》（普里戈金等）（翻译）上海译文出版社  
+《童心与发现》（梁美灵等）三联书店  
+《上帝掷骰子吗——混沌之数学》（斯图尔特）（翻译）上海远东出版社  
+《谈谈熵》（冯端等）湖南教育出版社  
+《复杂性中的思维》（迈因策尔）（翻译）中央编译出版社  
+《自然科学中的混沌和分形》（刘式达）北京大学出版社  
+《大脑工作原理》（哈肯）（翻译）上海科技教育出版社  
+《混沌与和谐》（郑春顺）（翻译）商务印书馆  
+《夸克与美洲豹》（盖尔曼）（翻译）湖南科学技术出版社  
+《时间与机遇》（阿尔伯特）（翻译）吉林人民出版社  
+《机遇与混沌》（吕埃勒）（翻译）上海科技教育出版社  
+《时间之矢与阿基米德之点》（普赖斯）上海科学技术出版社  
+《科学新领域的探索》（考夫曼）（翻译）湖南科学技术出版社  
+《确定性的终结》（普利高津）（翻译）上海科技教育出版社  
+《混沌学传奇》（卢侃）上海翻译出版公司  
+《别有洞天》（谷超豪）湖南科学技术出版社  
+《物理系统的元胞自动机模拟》（丘帕德等）（翻译）清华大学出版社  
+《大自然如何工作》（巴克）（翻译）华中师范大学出版社  
+《天遇——混沌与稳定性的起源》（迪亚库等）（翻译）上海科技教育出版社  
+《沙地上的图案》（波索马特尔）（翻译）江西教育出版社  
+《涌现——从混沌到有序》（霍兰）（翻译）上海科学技术出版社  
+《耗散结构论》（沈小峰等）上海人民出版社  
+《超循环论》（艾根）（翻译）上海译文出版社  
+《混沌及其秩序》（格雷席克）（翻译）百家出版社  
+《临界》（布查纳）（翻译）吉林人民出版社  
+《不确定的科学和不确定的世界》（波拉克）（翻译）上海世纪出版集团  
+《未来是定数吗？》（普里戈金）（翻译）上海世纪出版集团  
+《小小世界》（瓦茨）（翻译）中国人民大学出版社  
+《斑杂的世界》（卡特赖特）（翻译）上海世纪出版集团  
+《预知社会》（鲍尔）（翻译）当代中国出版社  
+《复杂性——一种哲学概观》（雷舍尔）（翻译）上海科技教育出版社  
+《微分方程、动力系统与混沌导论》（赫尔什等）（翻译）人民邮电出版社
